--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>정사영 분석으로 3D 추론 (완전)</title>
+    <title>정사영 분석으로 3D 추론</title>
     <style>
         body { margin: 0; overflow-y: auto; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; min-height: 100vh; background-color: #f8f8f8; font-family: sans-serif; padding: 20px; box-sizing: border-box; }
         h1, h2 { text-align: center; color: #333; margin-bottom: 10px; }
@@ -43,7 +43,7 @@
 <body>
 
     <h1>정사영 분석으로 3차원 구조 추론하기</h1>
-    <h2>(슬라이더 조절 시 실시간 분석)</h2>
+    <h2></h2>
 
     <canvas id="projectionCanvas" width="400" height="400"></canvas>
 
